--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Course name - Minor Web Development - CMD Amsterdam</title>
-
+  <link rel="stylesheet" href="static/css/style.css">
+  <title>Marie App</title>
 </head>
 <body>
-  
-  
+  <p id="output"></p>
+  <script type="module" src="static/js/app.js"></script>
 </body>
 </html>
