works but does not work at all

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Marie App</title>
 </head>
 <body>
+  <button id="button">Record</button>
   <p id="output"></p>
   <script type="module" src="static/js/app.js"></script>
 </body>
