grid refactor commit

--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/css/style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Marie App</title>
+  <meta name="description" content="Marie App">
+  <html lang="nl"></html>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
-  <button id="button">Record</button>
-  <p id="output"></p>
+  <main>
+    <section>
+      <article>1</article>
+      <article>
+        <img src="static/img/jenny-shen.jpeg">
+        <p>Jenny Shen</p>
+      </article>
+    </section>
+    <section>3</section>
+    <section>
+      <article>4</article>
+      <article>5</article>
+    </section>
+  </main>
   <script type="module" src="static/js/app.js"></script>
 </body>
 </html>
