--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     </section>
     <section>3</section>
     <section>
-      <article>4</article>
+      <article>
+        <img src="static/img/vasilis-van-gemert.jpg">
+        <p>Vasilis van Gemert</p>
+      </article>
       <article>5</article>
     </section>
   </main>
