--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
   <main>
     <section>
-      <article>1</article>
+      <article>
+        <p id="speech1" class="speech">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+        </p>
+      </article>
       <article>
         <img src="static/img/jenny-shen.jpeg">
         <p>Jenny Shen</p>
@@ -24,7 +28,11 @@
         <img src="static/img/vasilis-van-gemert.jpg">
         <p>Vasilis van Gemert</p>
       </article>
-      <article>5</article>
+      <article>
+        <p id="speech2" class="speech">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+        </p>
+      </article>
     </section>
   </main>
   <script type="module" src="static/js/app.js"></script>
