worked a bit more on grids

--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
       </article>
       <article>
         <img src="static/img/jenny-shen.jpeg">
+      </article>
+      <article class="grid-span right">
         <p>Jenny Shen</p>
       </article>
     </section>
     <section>3</section>
     <section>
-      <article>
+      <article class="grid-span">
         <p>Vasilis van Gemert</p>
-        <img src="static/img/vasilis-van-gemert.jpg">
       </article>
+      <article>
+        <img src="static/img/vasilis-van-gemert.jpg"></article>
       <article>
         <p id="speech2" class="speech">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
