more changes to grid

--- a/index.html
+++ b/index.html
@@ -12,30 +12,25 @@
 <body>
   <main>
     <section>
-      <article>
-        <p id="speech1" class="speech">
+      <p id="speech1" class="speech">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
-        </p>
-      </article>
-      <article>
-        <img src="static/img/jenny-shen.jpeg">
-      </article>
-      <article class="grid-span right">
-        <p>Jenny Shen</p>
-      </article>
+      </p>
+      <img class="right" src="static/img/jenny-shen.jpeg">
+      <p class="grid-span right">
+        Jenny Shen
+      </p>
     </section>
-    <section>3</section>
+
     <section>
-      <article class="grid-span">
-        <p>Vasilis van Gemert</p>
-      </article>
-      <article>
-        <img src="static/img/vasilis-van-gemert.jpg"></article>
-      <article>
-        <p id="speech2" class="speech">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
-        </p>
-      </article>
+      3
+    </section>
+    
+    <section>
+      <p class="grid-span">Vasilis van Gemert</p>
+      <img src="static/img/vasilis-van-gemert.jpg"></article>
+      <p id="speech2" class="speech">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+      </p>
     </section>
   </main>
   <script type="module" src="static/js/app.js"></script>
