some more changes to grid

--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
       <p id="speech1" class="speech">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
       </p>
-      <img class="right" src="static/img/jenny-shen.jpeg">
-      <p class="grid-span right">
-        Jenny Shen
-      </p>
+      <article>
+        <img alt="Foto van Jenny Shen" src="static/img/jenny-shen.jpeg">
+        <p>Jenny Shen</p>
+      </article>      
     </section>
 
     <section>
-      3
+      <img alt="Foto van een gedachte" src="static/img/wolk.png">
     </section>
     
     <section>
-      <p class="grid-span">Vasilis van Gemert</p>
-      <img src="static/img/vasilis-van-gemert.jpg"></article>
+      <article>
+        <p>Vasilis van Gemert</p>
+        <img alt="Foto van Vasilis van Gemert" src="static/img/vasilis-van-gemert.jpg">
+      </article>
       <p id="speech2" class="speech">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
       </p>
