--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   <main>
     <section>
       <p id="speech1" class="speech">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+1
       </p>
+      <div class="thinking">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
       <article>
         <img alt="Foto van Jenny Shen" src="static/img/jenny-shen.jpeg">
         <p>Jenny Shen</p>
@@ -22,7 +27,7 @@
     </section>
 
     <section>
-      <img alt="Foto van een gedachte" src="static/img/wolk.png">
+      <img alt="Foto van een gedachte" src="static/img/tikkie.png">
     </section>
     
     <section>
@@ -31,7 +36,7 @@
         <img alt="Foto van Vasilis van Gemert" src="static/img/vasilis-van-gemert.jpg">
       </article>
       <p id="speech2" class="speech">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+        You're listening to The Good, The Bad, and The Interesting, a series of conversations about quality with Vasilis van Gemert and an eclectic mix of designers.
       </p>
     </section>
   </main>
