Speaking works kinda

--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
         <p>Vasilis van Gemert</p>
         <img alt="Foto van Vasilis van Gemert" src="static/img/vasilis-van-gemert.jpg">
       </article>
-      <p id="speech2" class="speech">
-        You're listening to The Good, The Bad, and The Interesting, a series of conversations about quality with Vasilis van Gemert and an eclectic mix of designers.
-      </p>
+      <article class="saying">
+        <p id="speech2" class="speech">
+          You're listening to The Good, The Bad, and The Interesting, a series of conversations about quality with Vasilis van Gemert and an eclectic mix of designers.
+        </p>
+        <div class="arrow-left"></div>
+      </article>      
     </section>
   </main>
   <script type="module" src="static/js/app.js"></script>
