--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 <body>
   <main>
     <section>
-      <p id="speech1" class="speech">
-1
-      </p>
-      <div class="thinking">
+      <article id="speech1" class="saying">
+        <p class="speech">
+          You're listening to The Good, The Bad, and The Interesting, a series of conversations about quality with Vasilis van Gemert and an eclectic mix of designers.
+        </p>
+        <div class="arrow-left"></div>
+      </article> 
+      <article id="thinking1" class="thinking">
           <div></div>
           <div></div>
           <div></div>
-      </div>
+      </article>
       <article>
         <img alt="Foto van Jenny Shen" src="static/img/jenny-shen.jpeg">
         <p>Jenny Shen</p>
@@ -35,12 +38,17 @@
         <p>Vasilis van Gemert</p>
         <img alt="Foto van Vasilis van Gemert" src="static/img/vasilis-van-gemert.jpg">
       </article>
-      <article class="saying">
-        <p id="speech2" class="speech">
+      <article id="speech2" class="saying">
+        <p class="speech">
           You're listening to The Good, The Bad, and The Interesting, a series of conversations about quality with Vasilis van Gemert and an eclectic mix of designers.
         </p>
         <div class="arrow-left"></div>
-      </article>      
+      </article>  
+      <article id="thinking2" class="thinking">
+          <div></div>
+          <div></div>
+          <div></div>
+      </article>    
     </section>
   </main>
   <script type="module" src="static/js/app.js"></script>
