render module works

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
   <main>
     <section>
-      <article id="speech1" class="saying">
+      <article id="speech1" class="saying hidden">
         <p class="speech">
           You're listening to The Good, The Bad, and The Interesting, a series of conversations about quality with Vasilis van Gemert and an eclectic mix of designers.
         </p>
         <div class="arrow-left"></div>
       </article> 
-      <article id="thinking1" class="thinking">
+      <article id="thinking1" class="thinking hidden">
           <div></div>
           <div></div>
           <div></div>
@@ -30,7 +30,7 @@
     </section>
 
     <section>
-      <img alt="Foto van een gedachte" src="static/img/tikkie.png">
+      <img id="thoughtPicture" src="">
     </section>
     
     <section>
@@ -38,13 +38,13 @@
         <p>Vasilis van Gemert</p>
         <img alt="Foto van Vasilis van Gemert" src="static/img/vasilis-van-gemert.jpg">
       </article>
-      <article id="speech2" class="saying">
+      <article id="speech2" class="saying hidden">
         <p class="speech">
           You're listening to The Good, The Bad, and The Interesting, a series of conversations about quality with Vasilis van Gemert and an eclectic mix of designers.
         </p>
         <div class="arrow-left"></div>
       </article>  
-      <article id="thinking2" class="thinking">
+      <article id="thinking2" class="thinking hidden">
           <div></div>
           <div></div>
           <div></div>
