--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <section>
-      <img id="thoughtPicture" src="">
+      <img id="thoughtPicture" class="hidden" src="static/img/wolk.png" alt="De foto van een gedachten">
     </section>
     
     <section>
